# RESONANCE

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  signal_propagation
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  regulatory_feedback.yml
.github/workflows/: autopoiesis-nightly.yml  ci.yml
assets/: bridge_config.ron  climate_config.ron  terrain_config.ron
assets/elements/: aeros.ron  aqua.ron  azota.ron  calx.ron  carbo.ron  ceniza.ron  eter.ron  flora.ron  glacies.ron  humus.ron  ignis.ron  ionos.ron  lodo.ron  lux.ron  magna.ron  origo.ron  ozona.ron  phosph.ron  rayo.ron  salum.ron  silix.ron  terra.ron  umbra.ron  vacua.ron  vapor.ron  ventus.ron
assets/maps/: big_bang.ron  civilization_test.ron  competition_arena.ron  default.ron  demo_animal.ron  demo_celula.ron  demo_floor.ron  demo_minimal.ron  demo_planta.ron  demo_river_plateau.ron  demo_strata.ron  demo_virus.ron  earth.ron  earth_128.ron  earth_real.ron  flower_demo.ron  four_flowers.ron  genesis.ron  genesis_validation.ron  headless_stress.ron  inferred_world.ron  layer_ladder.ron  morphogenesis_demo.ron  optimal_inference.ron  proving_grounds.ron  round_world_rosa.ron  signal_latency_demo.ron  solar_system.ron  stellar_system.ron  visual_showcase.ron
assets/reactions/: formose.ron  hypercycle.ron  raf_minimal.ron
assets/shaders/: cell_field_snapshot.wgsl
assets/terrain_presets/: archipelago.ron  flat_plains.ron  mountain_valley.ron  river_plateau_demo.ron
assets/v6/: README.md
benches/: batch_benchmark.rs  bridge_benchmark.rs  energy_competition_bench.rs  morphogenesis_benchmark.rs  simulation_scale_bench.rs  worldgen_field_perf.rs
docs/: ARCHITECTURE.md  DEMOS.md  DEMOS_autopoiesis.cast  DEMO_FLOW.md  PLANE_COMPOSITION.md  PRE_DEPLOY_MANUAL_STEPS.md  kleiber.csv  sintesis_patron_vida_universo.docx  sintesis_patron_vida_universo.md
docs/VerifyWay/: VERIFY_WAVE_2026-03-19.md
docs/arquitectura/: 00_contratos_glosario.md  README.md  blueprint_axiomatic_closure.md  blueprint_batch_simulator.md  blueprint_blueprint_math.md  blueprint_bridge.md  blueprint_eco_boundaries.md  blueprint_ecosystem_autopoiesis.md  blueprint_emergence_tiers.md  blueprint_emergent_flora.md  blueprint_energy_field_inference.md  blueprint_entities.md  blueprint_gamedev_patterns.md  blueprint_gameplay_systems.md  blueprint_geometry_deformation.md  blueprint_geometry_flow.md  blueprint_inferred_world_geometry.md  blueprint_layer_bridge_optimizer.md  blueprint_layers.md  blueprint_living_organ_inference.md  blueprint_morphogenesis_inference.md  blueprint_plugins.md  blueprint_quantized_color.md  blueprint_rendering.md  blueprint_runtime_entrypoints.md  blueprint_runtime_platform.md  blueprint_sensory_lod.md  blueprint_sim_layers.md  blueprint_simulation.md  blueprint_simulation_probes.md  blueprint_thermodynamic_ladder.md  blueprint_topology.md  blueprint_v6.md  blueprint_v7.md  blueprint_visual_quantization.md  blueprint_world.md
docs/ci/: RELIABILITY_GATES.md
docs/design/: AXIOMATIC_CLOSURE.md  BLUEPRINT.md  BRIDGE_OPTIMIZER.md  CACHE_PERFORMANCE_DOD.md  EARTH_TELESCOPE_DEMO.md  ECO_BOUNDARIES.md  EMERGENCE_TIERS.md  EMERGENT_FLORA.md  EMERGENT_MORPHOLOGY.md  EVOLUTION_GROUP_BEHAVIOR.md  FOLDER_STRUCTURE.md  GAMEDEV_IMPLEMENTATION.md  GAMEDEV_PATTERNS.md  GEOMETRY_DEFORMATION_ENGINE.md  INDEX.md  INFERRED_WORLD_GEOMETRY.md  MACRO_STEPPING.md  MORPHOGENESIS.md  PLANETARY_SIMULATION.md  QUANTIZED_COLOR_ENGINE.md  SIMULATION_CORE_DECOUPLING.md  TERRAIN_MESHER.md  THERMODYNAMIC_LADDER.md  TOPOLOGY.md  USE_CASE_ARCHITECTURE.md  V5.md  V6.md  V7.md  VISUALIZATION_PIPELINE.md
docs/extraInfo/: digramaFromClaudeOpus.md
docs/guides/: DEMO_FLOW.md
docs/paper/: DISTRIBUTION_POSTS.md  references.bib  resonance_arxiv.tex
docs/regulatory/: AUDIT_CHECKLIST.md  REVIEW_LOG.md
docs/sprint/: README.md
docs/sprints/: DEMO_CIVILIZATION_TEST.md  DEMO_PROVING_GROUNDS.md  FEATURE_ROADMAP.md  README.md  SPRINT_PRIMER.md  USE_CASES_VALIDATED.md
memory/: project_sim_decoupling.md
scripts/: validate_regulatory_frontmatter.sh
src/: events.rs  lib.rs  main.rs  math_types.rs  sim_world.rs
src/batch/: arena.rs  batch.rs  bridge.rs  census.rs  constants.rs  events.rs  genome.rs  harness.rs  lineage.rs  mod.rs  neighbor_list.rs  pipeline.rs  scratch.rs  topology.rs
tests/: bridge_optimizer_equivalence.rs  chemistry_equivalence.rs  demo_flow_maps.rs  energy_competition_integration.rs  field_convergence.rs  g11_strong_ids.rs  gpu_cell_field_snapshot_palette_dispatch.rs  input_event_flow.rs  morphogenesis_integration.rs  pathfinding_multi_waypoint.rs  planet_viewer_integration.rs  probe_animal.rs  probe_celula.rs  probe_mono_constructal.rs  probe_planta.rs  probe_virus.rs  property_autopoiesis.proptest-regressions  property_autopoiesis.rs  property_conservation.proptest-regressions  property_conservation.rs  q3_pub_field_api.rs  r1_conservation.rs  r2_determinism.rs  r4_calibration.rs  r5_sensitivity.rs  r6_observability.rs  r7_morph_robustness.rs  r8_surrogate.rs  r9_ci_gates.rs  require_marker_hierarchy.rs  senescence_materialization_check.rs  sf_integration.rs  sparse_set_transient_markers.rs  t9_terrain_config_hot_reload.rs  test_senescence_insert.rs  wgsl_cell_field_snapshot_valid.rs
tools/: README.md  plot_kleiber.py  record_demo.sh
(+1107 files in other folders)
