[package]
name = "resonance"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Simulación alquímica MOBA basada en resonancia de ondas - Motor ECS con Bevy"

[features]
default = []
bridge_optimizer = []
gpu_cell_field_snapshot = []
v6_fixed_tick = []
v6_collision_backend_3d = []
v7_worldgen = []

[dependencies]
bevy = { version = "0.15", features = ["serialize"] }
glam = "0.29"
bytemuck = "1.25"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
serde_json = "1"
fxhash = "0.2"
tracing = "0.1"
noise = "0.9"
oxidized_navigation = "0.12"
parry3d = "0.17"
rayon = "1.10"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
naga = { version = "23", features = ["wgsl-in"] }
pollster = "0.4"
proptest = "1.4"
wgpu = { version = "23", default-features = true, features = ["wgsl"] }

[[bin]]
name = "headless_sim"
path = "src/bin/headless_sim.rs"

[[bench]]
name = "worldgen_field_perf"
harness = false

[[bench]]
name = "bridge_benchmark"
harness = false
required-features = ["bridge_optimizer"]

[[bench]]
name = "morphogenesis_benchmark"
harness = false

[[bench]]
name = "simulation_scale_bench"
harness = false

[[bench]]
name = "energy_competition_bench"
harness = false

[[bench]]
name = "batch_benchmark"
harness = false

[[test]]
name = "bridge_optimizer_equivalence"
path = "tests/bridge_optimizer_equivalence.rs"
required-features = ["bridge_optimizer"]

[[test]]
name = "gpu_cell_field_snapshot_palette_dispatch"
path = "tests/gpu_cell_field_snapshot_palette_dispatch.rs"
required-features = ["gpu_cell_field_snapshot"]
