[package]
name = "resonance"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Emergent life simulation engine — 8 axioms, 4 constants, cancer resistance from thermodynamics"
license = "AGPL-3.0-or-later"

[features]
default = []
bridge_optimizer = []
gpu_cell_field_snapshot = []
v6_fixed_tick = []
v6_collision_backend_3d = []
v7_worldgen = []
pixel_viewer = ["dep:minifb"]
md_3d = []
# Bins en migración a la API actual de Bevy 0.15 — gated para no romper
# `cargo test`/`cargo check` por defecto. Habilitar con `--features experimental_bins`.
experimental_bins = []
# Dev-only: linkea Bevy como shared lib → 60-80% faster incremental builds.
# Nunca usar en release (produce un .so/.dll dependency).
# Uso: `cargo run --bin <viz_bin> --features fast_compile`
fast_compile = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.15", features = ["serialize"] }
glam = "0.29"
bytemuck = "1.25"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
serde_json = "1"
fxhash = "0.2"
tracing = "0.1"
noise = "0.9"
oxidized_navigation = "0.12"
parry3d = "0.17"
rayon = "1.10"
bevy_egui = "0.31"
egui_plot = "0.29"
minifb = { version = "0.27", optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
naga = { version = "23", features = ["wgsl-in"] }
pollster = "0.4"
proptest = "1.4"
wgpu = { version = "23", default-features = true, features = ["wgsl"] }

[[bin]]
name = "headless_sim"
path = "src/bin/headless_sim.rs"

[[bin]]
name = "sim_viewer"
path = "src/bin/sim_viewer.rs"

[[bin]]
name = "fermi"
path = "src/bin/fermi.rs"

[[bin]]
name = "convergence"
path = "src/bin/convergence.rs"

[[bin]]
name = "personal_universe"
path = "src/bin/personal_universe.rs"

[[bin]]
name = "versus"
path = "src/bin/versus.rs"

[[bin]]
name = "speciation"
path = "src/bin/speciation.rs"

[[bin]]
name = "cambrian"
path = "src/bin/cambrian.rs"

[[bin]]
name = "debate"
path = "src/bin/debate.rs"

[[bin]]
name = "universe_lab"
path = "src/bin/universe_lab.rs"

[[bin]]
name = "mesh_export"
path = "src/bin/mesh_export.rs"

[[bin]]
name = "museum"
path = "src/bin/museum.rs"

[[bin]]
name = "fossil_record"
path = "src/bin/fossil_record.rs"

[[bin]]
name = "petri_dish"
path = "src/bin/petri_dish.rs"

[[bin]]
name = "ecosystem_music"
path = "src/bin/ecosystem_music.rs"

[[bin]]
name = "cancer_therapy"
path = "src/bin/cancer_therapy.rs"

[[bin]]
name = "planet_viewer"
path = "src/bin/planet_viewer.rs"
required-features = ["experimental_bins"]

[[bin]]
name = "earth_telescope"
path = "src/bin/earth_telescope.rs"
required-features = ["experimental_bins"]

[[bin]]
name = "survival"
path = "src/bin/survival.rs"
required-features = ["experimental_bins"]

[[bin]]
name = "paper_validation"
path = "src/bin/paper_validation.rs"

[[bin]]
name = "autopoietic_lab"
path = "src/bin/autopoietic_lab/main.rs"

[[bench]]
name = "worldgen_field_perf"
harness = false

[[bench]]
name = "bridge_benchmark"
harness = false
required-features = ["bridge_optimizer"]

[[bench]]
name = "morphogenesis_benchmark"
harness = false

[[bench]]
name = "simulation_scale_bench"
harness = false

[[bench]]
name = "energy_competition_bench"
harness = false

[[bench]]
name = "batch_benchmark"
harness = false

[[test]]
name = "bridge_optimizer_equivalence"
path = "tests/bridge_optimizer_equivalence.rs"
required-features = ["bridge_optimizer"]

[[test]]
name = "gpu_cell_field_snapshot_palette_dispatch"
path = "tests/gpu_cell_field_snapshot_palette_dispatch.rs"
required-features = ["gpu_cell_field_snapshot"]
